--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
+    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli -d src/database/data-source.ts"
   },
   "keywords": [],
   "author": "",
@@ -30,7 +31,11 @@
     "csv-parse": "^5.3.0",
     "express": "^4.18.1",
     "multer": "^1.4.5-lts.1",
+    "pg": "^8.8.0",
+    "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.5.0",
+    "tsyringe": "^4.7.0",
+    "typeorm": "^0.3.10",
     "uuid": "^9.0.0"
   }
 }
