--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/multer": "^1.4.7",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
@@ -28,6 +29,7 @@
   "dependencies": {
     "@types/express": "^4.17.14",
     "@types/swagger-ui-express": "^4.1.3",
+    "bcryptjs": "^2.4.3",
     "csv-parse": "^5.3.0",
     "express": "^4.18.1",
     "multer": "^1.4.5-lts.1",
