--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
   },
   "dependencies": {
     "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/swagger-ui-express": "^4.1.3",
     "bcryptjs": "^2.4.3",
     "csv-parse": "^5.3.0",
     "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
