upload de imagem

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli -d src/database/data-source.ts"
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
+    "typeorm --run": "ts-node-dev ./node_modules/typeorm/cli -d src/database/data-source.ts"
   },
   "keywords": [],
   "author": "",
