--- a/package.json
+++ b/package.json
@@ -1,47 +1,51 @@
 {
-  "name": "rentalx",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
-    "typeorm --run": "ts-node-dev ./node_modules/typeorm/cli -d src/database/data-source.ts"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/multer": "^1.4.7",
-    "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.37.0",
-    "@typescript-eslint/parser": "^5.37.0",
-    "eslint": "^8.23.1",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.7.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^4.8.3"
-  },
-  "dependencies": {
-    "@types/express": "^4.17.14",
-    "@types/jsonwebtoken": "^8.5.9",
-    "@types/swagger-ui-express": "^4.1.3",
-    "bcryptjs": "^2.4.3",
-    "csv-parse": "^5.3.0",
-    "express": "^4.18.1",
-    "express-async-errors": "^3.1.1",
-    "jsonwebtoken": "^8.5.1",
-    "multer": "^1.4.5-lts.1",
-    "pg": "^8.8.0",
-    "reflect-metadata": "^0.1.13",
-    "swagger-ui-express": "^4.5.0",
-    "tsyringe": "^4.7.0",
-    "typeorm": "^0.3.10",
-    "uuid": "^9.0.0"
-  }
+	"name": "rentalx",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "jest",
+		"dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
+		"typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli",
+		"typeorm:run": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli -d src/database/data-source.ts"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@types/bcryptjs": "^2.4.2",
+		"@types/jest": "^29.1.2",
+		"@types/multer": "^1.4.7",
+		"@types/uuid": "^8.3.4",
+		"@typescript-eslint/eslint-plugin": "^5.37.0",
+		"@typescript-eslint/parser": "^5.37.0",
+		"eslint": "^8.23.1",
+		"eslint-config-airbnb-base": "^15.0.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"jest": "^29.1.2",
+		"prettier": "^2.7.1",
+		"ts-jest": "^29.0.3",
+		"ts-node-dev": "^2.0.0",
+		"tsconfig-paths": "^4.1.0",
+		"typescript": "^4.8.3"
+	},
+	"dependencies": {
+		"@types/express": "^4.17.14",
+		"@types/jsonwebtoken": "^8.5.9",
+		"@types/swagger-ui-express": "^4.1.3",
+		"bcryptjs": "^2.4.3",
+		"csv-parse": "^5.3.0",
+		"express": "^4.18.1",
+		"express-async-errors": "^3.1.1",
+		"jsonwebtoken": "^8.5.1",
+		"multer": "^1.4.5-lts.1",
+		"pg": "^8.8.0",
+		"reflect-metadata": "^0.1.13",
+		"swagger-ui-express": "^4.5.0",
+		"tsyringe": "^4.7.0",
+		"typeorm": "^0.3.10",
+		"uuid": "^9.0.0"
+	}
 }
