--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "jest",
+		"test": "NODE_ENV=supertest jest --runInBand --detectOpenHandles",
 		"dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
 		"typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli",
-		"typeorm:run": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli -d src/database/data-source.ts"
+		"typeorm-run": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli -d src/database/data-source.ts"
 	},
 	"keywords": [],
 	"author": "",
@@ -16,6 +16,7 @@
 		"@types/bcryptjs": "^2.4.2",
 		"@types/jest": "^29.1.2",
 		"@types/multer": "^1.4.7",
+		"@types/supertest": "^2.0.12",
 		"@types/uuid": "^8.3.4",
 		"@typescript-eslint/eslint-plugin": "^5.37.0",
 		"@typescript-eslint/parser": "^5.37.0",
@@ -26,6 +27,7 @@
 		"eslint-plugin-prettier": "^4.2.1",
 		"jest": "^29.1.2",
 		"prettier": "^2.7.1",
+		"supertest": "^6.3.0",
 		"ts-jest": "^29.0.3",
 		"ts-node-dev": "^2.0.0",
 		"tsconfig-paths": "^4.1.0",
@@ -37,6 +39,7 @@
 		"@types/swagger-ui-express": "^4.1.3",
 		"bcryptjs": "^2.4.3",
 		"csv-parse": "^5.3.0",
+		"dayjs": "^1.11.6",
 		"express": "^4.18.1",
 		"express-async-errors": "^3.1.1",
 		"jsonwebtoken": "^8.5.1",
