--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@types/bcryptjs": "^2.4.2",
 		"@types/jest": "^29.1.2",
 		"@types/multer": "^1.4.7",
+		"@types/nodemailer": "^6.4.6",
 		"@types/supertest": "^2.0.12",
 		"@types/uuid": "^8.3.4",
 		"@typescript-eslint/eslint-plugin": "^5.37.0",
@@ -42,8 +43,10 @@
 		"dayjs": "^1.11.6",
 		"express": "^4.18.1",
 		"express-async-errors": "^3.1.1",
+		"handlebars": "^4.7.7",
 		"jsonwebtoken": "^8.5.1",
 		"multer": "^1.4.5-lts.1",
+		"nodemailer": "^6.8.0",
 		"pg": "^8.8.0",
 		"reflect-metadata": "^0.1.13",
 		"swagger-ui-express": "^4.5.0",
