--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
 FORGOT_MAIL_URL="http://localhost:3333/password/reset?token="
+
+## AWS Credentials
+AWS_ACESS_KEY_ID="AKIA3FFD3L3RLBK6OSHJ"
+AWS_SECRET_ACESS_KEY="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"
+AWS_BUCKET="rentx-api-mw"
+AWS_BUCKET_REGION="sa-east-1"
+
+disk=local
