--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
 		"@types/express": "^4.17.14",
 		"@types/jsonwebtoken": "^8.5.9",
 		"@types/swagger-ui-express": "^4.1.3",
+		"aws-sdk": "^2.1277.0",
 		"bcryptjs": "^2.4.3",
 		"csv-parse": "^5.3.0",
 		"dayjs": "^1.11.6",
+		"dotenv": "^16.0.3",
 		"express": "^4.18.1",
 		"express-async-errors": "^3.1.1",
 		"handlebars": "^4.7.7",
