--- a/.env
+++ b/.env
@@ -1,9 +1,19 @@
 FORGOT_MAIL_URL="http://localhost:3333/password/reset?token="
 
 ## AWS Credentials
-AWS_ACESS_KEY_ID="AKIA3FFD3L3RLBK6OSHJ"
-AWS_SECRET_ACESS_KEY="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"
-AWS_BUCKET="rentx-api-mw"
-AWS_BUCKET_REGION="sa-east-1"
+AWS_ACCESS_KEY_ID=AKIA3FFD3L3RLBK6OSHJ
+AWS_SECRET_ACCESS_KEY=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
+AWS_BUCKET=rentx-api-mw
+AWS_BUCKET_REGION=sa-east-1
+AWS_BUCKET_URL=https://rentx-api-mw.s3.sa-east-1.amazonaws.com
 
-disk=local
+AWS_REGION=sa-east-1
+
+## Local refs
+APP_API_URL=http://localhost:3333
+
+# Switch upload destination (disk=s3 -> aws || disk=local -> local)
+disk=s3
+
+# Switch mode to send email (ethereal -> to local tests || ses -> aws SES service)
+MAIL_PROVIDER=ses
