--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
+		"build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
 		"test": "NODE_ENV=supertest jest --runInBand --detectOpenHandles",
 		"dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
 		"typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli",
@@ -13,14 +14,27 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@babel/cli": "^7.13.14",
+		"@babel/core": "^7.13.15",
+		"@babel/node": "^7.13.13",
+		"@babel/plugin-proposal-class-properties": "^7.16.7",
+		"@babel/plugin-proposal-decorators": "^7.17.9",
+		"@babel/preset-env": "^7.17.10",
+		"@babel/preset-typescript": "^7.16.7",
 		"@types/bcryptjs": "^2.4.2",
+		"@types/express": "^4.17.15",
 		"@types/jest": "^29.1.2",
+		"@types/jsonwebtoken": "^8.5.9",
+		"@types/mime": "^3.0.1",
 		"@types/multer": "^1.4.7",
 		"@types/nodemailer": "^6.4.6",
 		"@types/supertest": "^2.0.12",
+		"@types/swagger-ui-express": "^4.1.3",
 		"@types/uuid": "^8.3.4",
 		"@typescript-eslint/eslint-plugin": "^5.37.0",
 		"@typescript-eslint/parser": "^5.37.0",
+		"babel-plugin-module-resolver": "^4.1.0",
+		"babel-plugin-transform-typescript-metadata": "^0.3.2",
 		"eslint": "^8.23.1",
 		"eslint-config-airbnb-base": "^15.0.0",
 		"eslint-config-prettier": "^8.5.0",
@@ -35,11 +49,9 @@
 		"typescript": "^4.8.3"
 	},
 	"dependencies": {
-		"@types/express": "^4.17.14",
-		"@types/jsonwebtoken": "^8.5.9",
-		"@types/swagger-ui-express": "^4.1.3",
-		"aws-sdk": "^2.1277.0",
+		"aws-sdk": "^2.1279.0",
 		"bcryptjs": "^2.4.3",
+		"class-transformer": "^0.5.1",
 		"csv-parse": "^5.3.0",
 		"dayjs": "^1.11.6",
 		"dotenv": "^16.0.3",
@@ -47,11 +59,12 @@
 		"express-async-errors": "^3.1.1",
 		"handlebars": "^4.7.7",
 		"jsonwebtoken": "^8.5.1",
+		"mime": "^3.0.0",
 		"multer": "^1.4.5-lts.1",
 		"nodemailer": "^6.8.0",
 		"pg": "^8.8.0",
 		"reflect-metadata": "^0.1.13",
-		"swagger-ui-express": "^4.5.0",
+		"swagger-ui-express": "^4.6.0",
 		"tsyringe": "^4.7.0",
 		"typeorm": "^0.3.10",
 		"uuid": "^9.0.0"
