--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-version: "3.7"
+version: '3.7'
 
-services: 
-  database_rentx: 
+services:
+  database_rentx:
     image: postgres
     container_name: database_rentx
     restart: always
@@ -13,11 +13,11 @@ services:
       - POSTGRES_DB=rentx
     volumes:
       - pgdata:/data/postgres
-      
+
   app:
     build: .
     container_name: rentx
-    ports: 
+    ports:
       - 3333:3333
     volumes:
       - .:/usr/app
