--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,9 @@ disk=local
 
 # Switch mode to send email (ethereal -> to local tests || ses -> aws SES service)
 MAIL_PROVIDER=ethereal
+
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+
+SENTRY_DSN=
