--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,17 +14,23 @@ services:
     volumes:
       - pgdata:/data/postgres
 
-  app:
-    build: .
-    container_name: rentx
+  redis:
+    image: redis:alpine
     ports:
-      - 3333:3333
-    volumes:
-      - .:/usr/app
-    links:
-      - database_rentx
-    depends_on:
-      - database_rentx
+      - 6379:6379
+
+  # app:
+  #   build: .
+  #   container_name: rentx
+  #   ports:
+  #     - 3333:3333
+  #   volumes:
+  #     - .:/usr/app
+  #   links:
+  #     - database_rentx
+  #   depends_on:
+  #     - database_rentx
+
 volumes:
   pgdata:
     driver: local
