--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@types/mime": "^3.0.1",
 		"@types/multer": "^1.4.7",
 		"@types/nodemailer": "^6.4.6",
+		"@types/redis": "^4.0.11",
 		"@types/supertest": "^2.0.12",
 		"@types/swagger-ui-express": "^4.1.3",
 		"@types/uuid": "^8.3.4",
@@ -50,6 +51,8 @@
 		"typescript": "^4.8.3"
 	},
 	"dependencies": {
+		"@sentry/node": "^7.28.1",
+		"@sentry/tracing": "^7.28.1",
 		"aws-sdk": "^2.1279.0",
 		"bcryptjs": "^2.4.3",
 		"class-transformer": "^0.5.1",
@@ -65,6 +68,8 @@
 		"multer": "^1.4.5-lts.1",
 		"nodemailer": "^6.8.0",
 		"pg": "^8.8.0",
+		"rate-limiter-flexible": "^2.4.1",
+		"redis": "^4.5.1",
 		"reflect-metadata": "^0.1.13",
 		"swagger-ui-express": "^4.6.0",
 		"tsyringe": "^4.7.0",
