--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,46 +2,33 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
-    
+    branches: [main]
+
   workflow_dispatch:
-  
+
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
       - uses: actions/checkout@v2
-      
-      - name: Stup Nodejs
+
+      - name: Setup Nodejs
         uses: actions/setup-node@v2
         with:
-          node-version: 18.x
-          
+          node-version: 19.x
+
       - name: Install Dependencies
         run: yarn
-        
+
       - name: Build
         run: yarn build
-        
+
       - uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           port: ${{ secrets.SSH_PORT }}
           key: ${{ secrets.SSH_KEY }}
-          source: "., !node_modules"
-          target: "~/app/rentalx-api"
-     
-      - name: Update API
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          port: ${{ secrets.SSH_PORT }}
-          key: ${{ secrets.SSH_KEY }}
-          script: |
-            cd ~/app/rentalx-api
-            yarn
-            ./node_modules/.bin/typeorm migration:run
-            pm2 restart rentx_api
+          source: '., !node_modules'
+          target: '~/coffee-delivery/coffee-delivery-api'
